--- a/src/sample/livreur_Page.fxml
+++ b/src/sample/livreur_Page.fxml
@@ -42,12 +42,12 @@
                                     <children>
                                         <HBox prefHeight="29.0" prefWidth="759.0">
                                             <children>
-                                                <Label prefHeight="28.0" prefWidth="388.0" text="Sélectionner un colis a deposé">
+                                                <Label fx:id="livreur_page_label1" prefHeight="28.0" prefWidth="388.0" text="Sélectionner un colis a deposé">
                                                     <font>
                                                         <Font name="System Bold" size="16.0" />
                                                     </font>
                                                 </Label>
-                                                <Label prefHeight="17.0" prefWidth="360.0" text="Sélectionner un colis a recuperé">
+                                                <Label fx:id="livreur_page_label2" prefHeight="17.0" prefWidth="360.0" text="Sélectionner un colis a recuperé">
                                                     <font>
                                                         <Font name="System Bold" size="16.0" />
                                                     </font>
@@ -69,9 +69,9 @@
                                                                     <String fx:value="colis:36541287" />
                                                                 </FXCollections>
 
-                                                            </items>
+                                                                                    </items>
                                                         </ListView>
-                                                        <JFXButton prefHeight="30.0" prefWidth="145.0" style="-fx-background-color:                                                             #ab34eb;" text="Deposer le colis" textFill="WHITE">
+                                                        <JFXButton fx:id="livreur_page_btn1" prefHeight="30.0" prefWidth="145.0" style="-fx-background-color: #ab34eb;" text="Deposer le colis" textFill="WHITE">
                                                             <font>
                                                                 <Font name="Roboto Bold" size="14.0" />
                                                             </font>
@@ -92,7 +92,7 @@
                                                                 </FXCollections>
                                                             </items>
                                                         </ListView>
-                                                        <JFXButton prefHeight="30.0" prefWidth="145.0" style="-fx-background-color: #ab34eb;" text="Recuperer les colis" textFill="WHITE">
+                                                        <JFXButton fx:id="livreur_page_btn2" prefHeight="30.0" prefWidth="145.0" style="-fx-background-color: #ab34eb;" text="Recuperer les colis" textFill="WHITE">
                                                             <font>
                                                                 <Font name="Roboto Bold" size="14.0" />
                                                             </font>
@@ -105,15 +105,26 @@
                                 </VBox>
                             </children>
                         </AnchorPane>
-                        <JFXComboBox focusColor="#ab34eb" labelFloat="true" layoutX="648.0" layoutY="24.0" prefHeight="25.0" prefWidth="122.0" promptText="Francais" stylesheets="@style.css">
+                  <JFXButton fx:id="livreur_page_retour" onAction="#back_btn" style="&#10;                            " text="Retour" textFill="WHITE" underline="true">
+                     <font>
+                        <Font name="Roboto Medium" size="24.0" />
+                     </font>
+                  </JFXButton>
+                        <JFXComboBox fx:id="livreur_page_combobox" focusColor="#ab34eb" labelFloat="true" layoutX="648.0" layoutY="24.0" prefHeight="25.0" prefWidth="122.0" promptText="Francais" stylesheets="@style.css">
+                            <items>
+                                <FXCollections fx:factory="observableArrayList">
+                                    <String fx:value="Francais" />
+                                    <String fx:value="العربية" />
+                                </FXCollections>
+                            </items>
                         </JFXComboBox>
-                        <Label alignment="CENTER" layoutX="188.0" layoutY="61.0" prefHeight="34.0" prefWidth="425.0" text="Déposer ou recupérer des colis" textAlignment="CENTER" textFill="WHITE">
+                        <Label fx:id="livreur_page_label" alignment="CENTER" layoutX="188.0" layoutY="61.0" prefHeight="34.0" prefWidth="425.0" text="Déposer ou recupérer des colis" textAlignment="CENTER" textFill="WHITE">
                             <font>
                                 <Font name="System Bold" size="24.0" />
                             </font>
                         </Label>
 
-                    </children>
+                                            </children>
                 </AnchorPane>
             </children>
         </StackPane>
